Ajax de verificación de nombre Ok

--- a/EjemploASPWeb/Views/Usuarios/Create.cshtml
+++ b/EjemploASPWeb/Views/Usuarios/Create.cshtml
@@ -14,8 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control" id="nombreUsuario" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
+                <small id="nombreUsuarioError" class="form-text text-danger" style="display:none;">El nombre de usuario ya existe.</small>
             </div>
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
@@ -43,7 +44,7 @@
                 <span asp-validation-for="NumeroDeMascotas" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" id="submitButton" />
             </div>
         </form>
     </div>
@@ -55,4 +56,31 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function () {
+            $('#nombreUsuario').on('input', function () {
+                var nombreUsuario = $(this).val();
+                if (nombreUsuario.length > 0) {
+                    $.ajax({
+                        url: '@Url.Action("VerificarNombreUsuario", "Usuarios")',
+                        type: 'GET',
+                        data: { nombreUsuario: nombreUsuario },
+                        success: function (data) {
+                            if (data) {
+                                $('#nombreUsuarioError').show();
+                                $('#submitButton').prop('disabled', true);
+                            } else {
+                                $('#nombreUsuarioError').hide();
+                                $('#submitButton').prop('disabled', false);
+                            }
+                        }
+                    });
+                } else {
+                    $('#nombreUsuarioError').hide();
+                    $('#submitButton').prop('disabled', false);
+                }
+            });
+        });
+    </script>
 }
