--- a/EjemploASPWeb/Views/Usuarios/Create.cshtml
+++ b/EjemploASPWeb/Views/Usuarios/Create.cshtml
@@ -54,6 +54,15 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<!-- Overlay para deshabilitar la pantalla y mostrar el círculo de carga -->
+<div id="overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); z-index:1000;">
+    <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);">
+        <div class="spinner-border text-light" role="status">
+            <span class="sr-only"></span>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
@@ -62,6 +71,12 @@
             $('#nombreUsuario').on('input', function () {
                 var nombreUsuario = $(this).val();
                 if (nombreUsuario.length > 0) {
+
+
+                    $('#overlay').show(); // Mostrar overlay
+
+
+
                     $.ajax({
                         url: '@Url.Action("VerificarNombreUsuario", "Usuarios")',
                         type: 'GET',
@@ -74,8 +89,20 @@
                                 $('#nombreUsuarioError').hide();
                                 $('#submitButton').prop('disabled', false);
                             }
+                        },
+
+
+                        complete: function () {
+                            $('#overlay').hide(); // Ocultar overlay
                         }
                     });
+
+
+
+
+
+
+
                 } else {
                     $('#nombreUsuarioError').hide();
                     $('#submitButton').prop('disabled', false);
